# tapis_pods_training

./: .gitignore  Dockerfile  docker-compose.yml  supervisord.conf
my-copilot-app/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json
my-copilot-app/app/: layout.tsx  page.tsx  providers.tsx
my-copilot-app/app/api/copilotkit/: route.ts
tapis-pods-training-20260610/: .dockerignore  .gitignore  Dockerfile  Rust Atomics and Locks.txt  agent_testing_assignment_rust_rag.py  main.py  pod_config.json.template  pyproject.toml
