[project]
name = "tapis-pods-training-20260610"
version = "0.1.0"
description = "A RAG example to read the book Rust Atomics and Locks.txt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.18.1",
    "jupyterlab>=4.5.8",
    "pydantic-ai>=0.0.35",
    "tapipy>=25.4.0",
    "chromadb>=1.5.6",
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
    "openai>=2.41.1",
    "litellm>=1.89.4",
    "pydantic-ai-litellm>=0.2.6",
    "pydantic-ai-slim[ag-ui]>=1.107.0",
    "supervisor>=4.3.0",
]
